# qr-code-generator

./: .gitignore  Cargo.toml  README.md  build.rs  generate_gf_tables.py  test.sh  test_alignment.sh
src/: alignment.rs  analyzer.rs  capacity.rs  ecc.rs  ecc_data.rs  encoding.rs  generator.rs  lib.rs  main.rs  mask.rs  pixel_mapping.rs  types.rs
tests/: README.md  run_tests.sh  simple_test.sh  test_all_noise.sh  test_qr_noise.sh  test_version_structure.sh
