[package]
name = "qr-generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qr-generator"
path = "src/main.rs"

[[bin]]
name = "qr-analyzer"
path = "src/analyzer.rs"

[[bin]]
name = "qr-noise"
path = "src/bin/qr-noise.rs"

[[bin]]
name = "qr-diff"
path = "src/bin/qr-diff.rs"

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
