[package]
name = "qr-tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "qr_tools"
path = "src/lib.rs"
crate-type = ["lib"]
bench = false
test = true
doc = true

[[bin]]
name = "qr-generator"
path = "src/bin/qr-generator.rs"

[[bin]]
name = "qr-analyzer"
path = "src/bin/qr-analyzer.rs"

[[bin]]
name = "qr-noise"
path = "src/bin/qr-noise.rs"

[[bin]]
name = "qr-diff"
path = "src/bin/qr-diff.rs"

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
